--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.10.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
     "request": "^2.81.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "get-date": "^1.0.2",
+    "json-loader": "^0.5.4",
     "webpack": "^2.6.1"
   }
 }
